--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,38 +1,17 @@
 <div class="w-full flex flex-wrap">
   <div class="w-full md:w-1/2 flex flex-col">
     <div class="flex justify-center md:justify-start pt-12 md:pl-12 md:-mb-24">
-      <a href="#" class="bg-black text-white font-bold text-xl p-4">GoChat</a>
+      <%= render 'shared/logo' %>
     </div>
     <div class="flex flex-col justify-center md:justify-start my-auto pt-8 md:pt-0 px-8 md:px-24 lg:px-32">
-      <p class="text-center text-3xl">Welcome.</p>
-
-      <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: "flex flex-col pt-3 md:pt-8"}) do |f| %>
-        <div class="flex flex-col pt-4">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "your@email.com", class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" %>
-        </div>
-
-        <div class="flex flex-col pt-4">
-          <%= f.label :password %>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" %>
-        </div>
-
-        <div class="flex flex-col pt-4">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password", class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" %>
-        </div>
-
-      <%= f.submit "Sign up", class: "bg-black text-white font-bold text-lg hover:bg-gray-700 p-2 mt-8" %>
-      <% end %>
+      <%= render 'shared/welcome_message' %>
+      <%= render 'sign_up_form' %>
       <div class="text-center pt-12 pb-12">
-        <p>Already have an account? <%= render "users/shared/links" %></p>
+        <%= render 'already_have_account' %>
       </div>
     </div>
   </div>
   <div class="w-1/2 shadow-2xl">
-    <img class="object-cover w-full h-screen hidden md:block" src="https://source.unsplash.com/OxHPDs4WV8Y">
+    <%= render 'shared/log_in_page_image' %>
   </div>
 </div>
