--- a/app/views/users/registrations/_sign_up_form.html.erb
+++ b/app/views/users/registrations/_sign_up_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: "flex flex-col pt-3 md:pt-8"}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "flex flex-col pt-3 md:pt-8"}) do |f| %>
   <div class="flex flex-col pt-4">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "your@email.com", class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline" %>
