--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,6 +5,7 @@
     </div>
     <div class="flex flex-col justify-center md:justify-start my-auto pt-8 md:pt-0 px-8 md:px-24 lg:px-32">
       <%= render 'shared/welcome_message' %>
+      <%= render "devise/shared/error_messages", resource: resource %>
       <%= render 'sign_up_form' %>
       <div class="text-center pt-12 pb-12">
         <%= render 'already_have_account' %>
